@@ -1,5 +1,13 @@
 2016-06-22  Pedro Alves  <pedro@palves.net>
 
+	* src/RspConnection.cpp (RspConnection): Initialize mPendingBreak.
+	(RspConnection::getPkt): Set mPendingBreak if a 0x03 is seen.
+	(RspConnection::getBreakCommand): Return true if we have a pending
+	break.
+	* src/RspConnection.h (RspConnection) <mPendingBreak>: New field.
+
+2016-06-22  Pedro Alves  <pedro@palves.net>
+
 	* src/GdbServer.cpp (GdbServer::rspVCont): Check for Ctrl-C
 	requests before handling thread stops.
 
